frontend 기초 설정 2

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -41,7 +41,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="dashboard.html">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span></a>
             </li>
@@ -56,46 +56,44 @@
 
              <!--  정보처리 기능사 navbar -->
              <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
-                    aria-expanded="true" aria-controls="collapsePages">
-                    <i class="fas fa-fw fa-folder"></i>
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseInfoTech"
+                    aria-expanded="true" aria-controls="collapseInfoTech">
                     <span>정보처리기능사</span>
                 </a>
-                <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+                <div id="collapseInfoTech" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">이론 학습:</h6>
-                        <a class="collapse-item" href="login.html">필기 학습</a>
-                        <a class="collapse-item" href="login.html">실기 학습</a>
+                        <a class="collapse-item" href="InfoTechWrLearn.html">필기 학습</a>
+                        <a class="collapse-item" href="InfoTechPrLearn.html">실기 학습</a>
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">모의 시험:</h6>
-                        <a class="collapse-item" href="404.html">모의 필기 시험</a>
-                        <a class="collapse-item" href="blank.html">모의 실기 시험</a>
+                        <a class="collapse-item" href="InfoTechWrTest.html">모의 필기 시험</a>
+                        <a class="collapse-item" href="InfoTechPrTest.html">모의 실기 시험</a>
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">학습 지도:</h6>
-                        <a class="collapse-item" href="404.html">학습 지도</a>
+                        <a class="collapse-item" href="#">학습 지도</a>
                     </div>
                 </div>
             </li>
 
             <!--  정보처리산업기사 navbar -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
-                    aria-expanded="true" aria-controls="collapsePages">
-                    <i class="fas fa-fw fa-folder"></i>
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseInfoIEngineer"
+                    aria-expanded="true" aria-controls="collapseInfoIEngineer">
                     <span>정보처리산업기사</span>
                 </a>
-                <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+                <div id="collapseInfoIEngineer" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">이론 학습:</h6>
-                        <a class="collapse-item" href="login.html">필기 학습</a>
-                        <a class="collapse-item" href="login.html">실기 학습</a>
+                        <a class="collapse-item" href="InfoIEngineerWrLearn.html">필기 학습</a>
+                        <a class="collapse-item" href="InfoIEngineerPrLearn.html">실기 학습</a>
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">모의 시험:</h6>
-                        <a class="collapse-item" href="404.html">모의 필기 시험</a>
-                        <a class="collapse-item" href="blank.html">모의 실기 시험</a>
+                        <a class="collapse-item" href="InfoIEngineerWrTest.html">모의 필기 시험</a>
+                        <a class="collapse-item" href="InfoIEngineerPrTest.html">모의 실기 시험</a>
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">학습 지도:</h6>
-                        <a class="collapse-item" href="404.html">학습 지도</a>
+                        <a class="collapse-item" href="#">학습 지도</a>
                     </div>
                 </div>
             </li>
@@ -103,23 +101,22 @@
 
             <!--  정보처리기사 navbar -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
-                    aria-expanded="true" aria-controls="collapsePages">
-                    <i class="fas fa-fw fa-folder"></i>
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseInfoEngineer"
+                    aria-expanded="true" aria-controls="collapseInfoEngineer">
                     <span>정보처리기사</span>
                 </a>
-                <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+                <div id="collapseInfoEngineer" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">이론 학습:</h6>
-                        <a class="collapse-item" href="login.html">필기 학습</a>
-                        <a class="collapse-item" href="login.html">실기 학습</a>
+                        <a class="collapse-item" href="InfoEngineerWrLearn.html">필기 학습</a>
+                        <a class="collapse-item" href="InfoEngineerPrLearn.html">실기 학습</a>
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">모의 시험:</h6>
-                        <a class="collapse-item" href="404.html">모의 필기 시험</a>
-                        <a class="collapse-item" href="blank.html">모의 실기 시험</a>
+                        <a class="collapse-item" href="InfoEngineerWrTest.html">모의 필기 시험</a>
+                        <a class="collapse-item" href="InfoEngineerPrTest.html">모의 실기 시험</a>
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">학습 지도:</h6>
-                        <a class="collapse-item" href="404.html">학습 지도</a>
+                        <a class="collapse-item" href="#">학습 지도</a>
                     </div>
                 </div>
             </li>
@@ -135,9 +132,9 @@
 
             <!-- 문의하기 (수정) -->
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="Contact.html">
                     <i class="fas fa-fw fa-chart-area"></i>
-                    <span>문의</span></a>
+                    <span>문의사항</span></a>
             </li>
 
             <!-- Divider -->
@@ -149,8 +146,6 @@
             </div>
 
         </ul>
-        <!-- End of Sidebar -->
-
         <!-- Content Wrapper -->
         <div id="content-wrapper" class="d-flex flex-column">
 
@@ -164,20 +159,6 @@
                     <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
                         <i class="fa fa-bars"></i>
                     </button>
-
-                    <!-- Topbar Search -->
-                    <form
-                        class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-                        <div class="input-group">
-                            <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
-                                aria-label="Search" aria-describedby="basic-addon2">
-                            <div class="input-group-append">
-                                <button class="btn btn-primary" type="button">
-                                    <i class="fas fa-search fa-sm"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </form>
 
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
@@ -254,72 +235,6 @@
                                     </div>
                                 </a>
                                 <a class="dropdown-item text-center small text-gray-500" href="#">Show All Alerts</a>
-                            </div>
-                        </li>
-
-                        <!-- Nav Item - Messages -->
-                        <li class="nav-item dropdown no-arrow mx-1">
-                            <a class="nav-link dropdown-toggle" href="#" id="messagesDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="fas fa-envelope fa-fw"></i>
-                                <!-- Counter - Messages -->
-                                <span class="badge badge-danger badge-counter">7</span>
-                            </a>
-                            <!-- Dropdown - Messages -->
-                            <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                                aria-labelledby="messagesDropdown">
-                                <h6 class="dropdown-header">
-                                    Message Center
-                                </h6>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="img/undraw_profile_1.svg"
-                                            alt="...">
-                                        <div class="status-indicator bg-success"></div>
-                                    </div>
-                                    <div class="font-weight-bold">
-                                        <div class="text-truncate">Hi there! I am wondering if you can help me with a
-                                            problem I've been having.</div>
-                                        <div class="small text-gray-500">Emily Fowler · 58m</div>
-                                    </div>
-                                </a>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="img/undraw_profile_2.svg"
-                                            alt="...">
-                                        <div class="status-indicator"></div>
-                                    </div>
-                                    <div>
-                                        <div class="text-truncate">I have the photos that you ordered last month, how
-                                            would you like them sent to you?</div>
-                                        <div class="small text-gray-500">Jae Chun · 1d</div>
-                                    </div>
-                                </a>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="img/undraw_profile_3.svg"
-                                            alt="...">
-                                        <div class="status-indicator bg-warning"></div>
-                                    </div>
-                                    <div>
-                                        <div class="text-truncate">Last month's report looks great, I am very happy with
-                                            the progress so far, keep up the good work!</div>
-                                        <div class="small text-gray-500">Morgan Alvarez · 2d</div>
-                                    </div>
-                                </a>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <div class="dropdown-list-image mr-3">
-                                        <img class="rounded-circle" src="https://source.unsplash.com/Mv9hjnEUHR4/60x60"
-                                            alt="...">
-                                        <div class="status-indicator bg-success"></div>
-                                    </div>
-                                    <div>
-                                        <div class="text-truncate">Am I a good boy? The reason I ask is because someone
-                                            told me that people say this to all dogs, even if they aren't good...</div>
-                                        <div class="small text-gray-500">Chicken the Dog · 2w</div>
-                                    </div>
-                                </a>
-                                <a class="dropdown-item text-center small text-gray-500" href="#">Read More Messages</a>
                             </div>
                         </li>
 
