--- a/html/InfoEngineerPrLearn.html
+++ b/html/InfoEngineerPrLearn.html
@@ -280,14 +280,8 @@
 
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
-
-                    <!-- Page Heading -->
-                    <h1 class="h3 mb-4 text-gray-800">try43</h1>
                     
                     <div id="chat" class="chat-container">
-                        <div class="chat-bubble user-bubble">
-                            안녕하세요! 운세를 확인해주세요.
-                        </div>
                         <div class="chat-bubble bot-bubble" id="fortuneResponse">
                             <!-- The fortune response will appear here -->
                         </div>
@@ -356,7 +350,7 @@
     <script src="js/sb-admin-2.min.js"></script>
 
     <!-- GPT API Connecting -->
-    <script src="gptapi.js" async></script>
+    <script src="js/gptapi.js" async></script>
 
 </body>
 
