--- a/html/InfoIEngineerPrTest.html
+++ b/html/InfoIEngineerPrTest.html
@@ -269,19 +269,15 @@
 
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
-                    <div id="chat" class="chat-container">
-                        <div class="intro-container">
-                            <h2>정보처리기사 실기 학습 도우미</h2>
-                        </div>
-                        <div id="chat-messages"></div>
-                        <div id="loader" style="display: none;">답변을 생성 중입니다...</div>
-                        <div class="input-group mt-3">
-                            <input type="text" id="messageInput" class="chat-input" placeholder="질문을 입력하세요...">
-                            <button onclick="sendMessage()" class="send-button">보내기</button>
-                        </div>
+                    <h1 class="h3 mb-4 text-gray-800">정보처리산업기사 실기 모의고사</h1>
+                    <div id="quiz-container">
+                        <div id="question-container"></div>
+                        <div id="options-container"></div>
+                        <button id="submit-btn" class="btn btn-primary mt-3">제출</button>
+                        <div id="result-container" class="mt-3"></div>
+                        <button id="next-btn" class="btn btn-secondary mt-3" style="display: none;">다음 문제</button>
                     </div>
                 </div>
-                
                 <!-- /.container-fluid -->
 
             </div>
@@ -339,7 +335,7 @@
     <script src="js/sb-admin-2.min.js"></script>
 
     <!-- GPT API Connecting -->
-    <script src="js/gptapi.js" async></script>
+    <script src="js/gptapi2.js" async></script>
 
 </body>
 
