--- a/html/index.html
+++ b/html/index.html
@@ -236,7 +236,7 @@
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">익명의 자격증 학습자</span>
                                 <img class="img-profile rounded-circle"
-                                    src="img/undraw_profile.svg">
+                                    src="/img/undraw_profile.svg">
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -474,7 +474,7 @@
                                 <div class="card-body">
                                     <div class="text-center">
                                         <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem;"
-                                            src="img/undraw_posting_photo.svg" alt="...">
+                                            src="/img/undraw_posting_photo.svg" alt="...">
                                     </div>
                                     <p>이 프로젝트는 Chat-GPT API를 기반으로 한 자격증 학습용 챗봇 시스템을 개발하여 웹 서비스로 구현하는 것을 목표로 진행하였습니다.사용자는 웹을 통해 접근 가능한 이 시스템을 통해 자격증 관련 이론 지식을 습득하고, 필기 및 실기 문제를 풀어볼 수 있습니다. 챗봇은 사용자의 학습 수준을 파악하여 맞춤형 학습 커리큘럼을 제공하며, 부족한 부분에 대한 솔루션을 제시합니다. 이를 통해 학습 효율성을 높이고, 시간과 장소에 구애받지 않는 접근성을 제공하여 자격증 취득을 위한 효과적인 학습 도구로 활용될 수 있습니다.</p>
                                 </div>
@@ -551,21 +551,21 @@
     </div>
 
     <!-- Bootstrap core JavaScript-->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/vendor/jquery/jquery.min.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Core plugin JavaScript-->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for all pages-->
-    <script src="js/sb-admin-2.min.js"></script>
+    <script src="/js/sb-admin-2.min.js"></script>
 
     <!-- Page level plugins -->
-    <script src="vendor/chart.js/Chart.min.js"></script>
+    <script src="/vendor/chart.js/Chart.min.js"></script>
 
     <!-- Page level custom scripts -->
-    <script src="js/demo/chart-area-demo.js"></script>
-    <script src="js/demo/chart-pie-demo.js"></script>
+    <script src="/js/demo/chart-area-demo.js"></script>
+    <script src="/js/demo/chart-pie-demo.js"></script>
 
 </body>
 
